--- a/training-system/src/index.html
+++ b/training-system/src/index.html
@@ -9,8 +9,9 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat+Alternates:400,500i&amp;subset=cyrillic" rel="stylesheet">
 </head>
-<body class="mat-typography">
+<body >
   <app-root></app-root>
 </body>
 </html>
